--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  
-
+    
+    <link rel="icon" href="https://shorturl.at/jkqV3" />
+    
     <title>React App</title>
   </head>
   <body>
